syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.codenotfound.grpc.user";
option java_outer_classname = "User";

package com.codenotfound.grpc.user;

message RequestParams {
  string username = 1;
  int32 age = 2;
}

message Response {
  string username = 1;
  int32 age = 2;
}

service UserService {
  rpc getUser (RequestParams) returns (Response);
}
